...
    with TickerProviderStateMixin {
  TabController? controller;
  int selectMenu = 0;
  int size_tap = 19;
  List menuArr = [
    {"name": "Home", "icon": Icons.home},
    {"name": "Story from scratch", "icon": Icons.book},
    {"name": "Story with assistance", "icon": Icons.storefront},
    {"name": "Sequel to Story", "icon": Icons.business_center},
    {"name": "Account", "icon": Icons.account_circle},
  ];

  @override
  void initState() {
...
